I fixed the grid overflow problem

--- a/style.css
+++ b/style.css
@@ -31,11 +31,12 @@ body {
     display: grid;
     gap: 1px;
     background-color: #ddd;
+    width: 500px;
+    height: 500px;
 }
 
 .board div {
-    width: 30px;
-    height: 30px;
+
     border: 1px solid #ccc;
 }
 
